--- a/ukf/ukf_3d_NED_6_dim_u.ipynb
+++ b/ukf/ukf_3d_NED_6_dim_u.ipynb
@@ -641,17 +641,26 @@
     "\n",
     "in the following line, add plot images\n",
     "\n",
-    "<img src=\"../plots/y_skip_0.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/z_skip_0.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/y_skip_1.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/z_skip_1.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/y_skip_2.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/z_skip_2.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/y_skip_3.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/z_skip_3.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/y_skip_4.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "<img src=\"../plots/z_skip_4.png\" alt=\"Skip 0\" width=\"450\"/>\n",
-    "\n"
+    "<div style=\"display: flex; gap: 10px;\">\n",
+    "  <img src=\"../plots/y_skip_0.png\" alt=\"Skip 0\" width=\"450\"/>\n",
+    "  <img src=\"../plots/z_skip_0.png\" alt=\"Skip 0\" width=\"450\"/>\n",
+    "</div>\n",
+    "<div style=\"display: flex; gap: 10px;\">\n",
+    "  <img src=\"../plots/y_skip_1.png\" alt=\"Skip 1\" width=\"450\"/>\n",
+    "  <img src=\"../plots/z_skip_1.png\" alt=\"Skip 1\" width=\"450\"/>\n",
+    "</div>\n",
+    "<div style=\"display: flex; gap: 10px;\">\n",
+    "  <img src=\"../plots/y_skip_2.png\" alt=\"Skip 2\" width=\"450\"/>\n",
+    "  <img src=\"../plots/z_skip_2.png\" alt=\"Skip 2\" width=\"450\"/>\n",
+    "</div>\n",
+    "<div style=\"display: flex; gap: 10px;\">\n",
+    "  <img src=\"../plots/y_skip_3.png\" alt=\"Skip 3\" width=\"450\"/>\n",
+    "  <img src=\"../plots/z_skip_3.png\" alt=\"Skip 3\" width=\"450\"/>\n",
+    "</div>\n",
+    "<div style=\"display: flex; gap: 10px;\">\n",
+    "  <img src=\"../plots/y_skip_4.png\" alt=\"Skip 4\" width=\"450\"/>\n",
+    "  <img src=\"../plots/z_skip_4.png\" alt=\"Skip 4\" width=\"450\"/>\n",
+    "</div>\n"
    ]
   },
   {
